force-app/main/default/objects/Activity/fields/Actual_Candidate_submitted__c.field-meta.xml
<CustomField>
    <fullName>Actual_Candidate_submitted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Candidate submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>