force-app/main/default/objects/Activity/fields/Candidates_to_submit__c.field-meta.xml
<CustomField>
    <fullName>Candidates_to_submit__c</fullName>
    <label>Candidates to submit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>