force-app/main/default/objects/Activity/fields/Incomplete_Submission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Submission_Reason__c</fullName>
    <label>Incomplete Submission Reason</label>
    <type>TextArea</type>
</CustomField>