force-app/main/default/objects/Activity/fields/Notification_hours__c.field-meta.xml
<CustomField>
    <fullName>Notification_hours__c</fullName>
    <label>Notification hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>