force-app/main/default/objects/Activity/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <formula>AND(
    Notification_hours__c &gt; 0,
    NOW() &gt;= ( In_Progress_Date_Time__c + (Notification_hours__c/ 24))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>