force-app/main/default/objects/Activity/fields/Set_Notification_interval_hours__c.field-meta.xml
<CustomField>
    <fullName>Set_Notification_interval_hours__c</fullName>
    <label>Set Notification interval hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>